--- a/reflections/pages/the-paradox-of-god/read.html
+++ b/reflections/pages/the-paradox-of-god/read.html
@@ -4,40 +4,30 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <!-- =========================
-       SEO / METADATA STANDARD
-       (EDIT THESE per reflection)
-  ========================== -->
-  <!-- EDIT: Page title -->
-  <title>The Paradox of God — A Solitude Reflection by Ninox Antolihao</title>
+  <!-- ============================================================
+       SEO + SOCIAL META TAGS
+       ✏️ EDIT THESE FOR EACH NEW PAGE
+  ============================================================ -->
+  <title>The Paradox of God — Solitude Reflections · Ninox Antolihao</title>
 
-  <!-- EDIT: Description -->
-  <meta name="description" content="A philosophical reflection exploring the tension between divine perfection, human suffering, and the moral weight of freedom.">
+  <meta name="description" content="✏️ Short description of this reflection.">
 
-  <!-- EDIT: Canonical URL -->
   <link rel="canonical" href="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/read.html">
 
-  <!-- Open Graph Meta -->
+  <!-- Open Graph -->
   <meta property="og:type" content="article">
-  <!-- EDIT: OG title -->
   <meta property="og:title" content="The Paradox of God — Solitude Reflections">
-  <!-- EDIT: OG description (same as meta description is fine) -->
-  <meta property="og:description" content="A philosophical reflection exploring the tension between divine perfection, human suffering, and the moral weight of freedom.">
-  <!-- EDIT: Absolute URL of share image -->
-  <meta property="og:image" content="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/share.jpg">
-  <!-- EDIT: OG URL -->
+  <meta property="og:description" content="✏️ Same description here.">
+  <meta property="og:image" content="/reflections/pages/the-paradox-of-god/share.jpg">
   <meta property="og:url" content="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/read.html">
 
-  <!-- Twitter Card -->
+  <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
-  <!-- EDIT: Twitter title -->
   <meta name="twitter:title" content="The Paradox of God — Solitude Reflections">
-  <!-- EDIT: Twitter description -->
-  <meta name="twitter:description" content="A philosophical reflection exploring the tension between divine perfection, human suffering, and the moral weight of freedom.">
-  <!-- EDIT: Twitter image -->
-  <meta name="twitter:image" content="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/share.jpg">
+  <meta name="twitter:description" content="✏️ Same description.">
+  <meta name="twitter:image" content="/reflections/pages/the-paradox-of-god/share.jpg">
 
-  <!-- JSON-LD Structured Data -->
+  <!-- JSON-LD -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -47,114 +37,135 @@
       "@type": "Person",
       "name": "Ninox Antolihao"
     },
-    "image": "https://stonegrillresto.net/reflections/pages/the-paradox-of-god/share.jpg",
-    "datePublished": "2025-01-01",
+    "image": "/reflections/pages/the-paradox-of-god/share.jpg",
     "publisher": {
       "@type": "Organization",
       "name": "Stone Grill Press",
       "logo": {
         "@type": "ImageObject",
-        "url": "https://stonegrillresto.net/reflections/assets/logo1.PNG"
+        "url": "/reflections/assets/logo1.PNG"
       }
     },
-    "description": "A philosophical reflection exploring the tension between divine perfection, human suffering, and the moral weight of freedom.",
+    "description": "✏️ Same description again.",
     "mainEntityOfPage": "https://stonegrillresto.net/reflections/pages/the-paradox-of-god/read.html"
   }
   </script>
 
-  <!-- =========================
-       SHARED STYLES
-  ========================== -->
-  <!-- Global reflections base styles (already existing on your site) -->
-  <link rel="stylesheet" href="/reflections/assets/styles/reflections.css?v=15">
-  <!-- Unified header + hamburger + audio design -->
-  <link rel="stylesheet" href="/reflections/assets/styles/reflections-header.css?v=21">
+  <!-- ============================================================
+       UNIFIED REFLECTIONS CSS  (DO NOT EDIT)
+  ============================================================ -->
+  <link rel="stylesheet" href="/reflections/assets/reflections-header.css?v=1">
 
-  <!-- Optional: PWA manifest for Reflections app -->
-  <link rel="manifest" href="/reflections/manifest.json">
 </head>
 
 <body>
-  <!-- HEADER PLACEHOLDER (filled by reflections-header.js) -->
+
+  <!-- ============================================================
+       UNIFIED HEADER PLACEHOLDER (DO NOT EDIT)
+  ============================================================ -->
   <div id="ref-header-placeholder"></div>
 
   <main class="page-content">
-    <!-- PAGE TITLE + SUBTITLE -->
+
+    <!-- ============================================================
+         PAGE TITLE + SUBTITLE
+         ✏️ EDIT THESE FOR EACH PAGE
+    ============================================================ -->
     <header class="page-header" style="max-width:800px;margin:0 auto 0.8rem auto;">
-      <!-- EDIT: Main title -->
       <h1>The Paradox of God</h1>
-      <!-- EDIT: Subtitle line -->
       <p class="page-subtitle">A Solitude Reflection by Ninox Antolihao</p>
 
-      <!-- EDIT: Scrolling subtitle text -->
+      <!-- Scrolling subtitle -->
       <div class="scrolling-subtitle">
-        <span>A reflection on divine perfection, human suffering, and the moral weight of freedom.</span>
+        <span>✏️ Short moving subtitle text here</span>
       </div>
     </header>
 
-    <!-- AUDIO PLAYER + PLAYLIST (standard block) -->
+    <!-- ============================================================
+         AUDIO PLAYER + PLAYLIST
+         ✏️ EDIT MP3 FILE PATHS + TITLES ONLY
+    ============================================================ -->
     <section class="audio-wrap">
       <div class="audio-wrapper">
         <audio id="reflectionAudio" controls preload="metadata">
           <source id="audioSource" src="" type="audio/mpeg">
-          Your browser does not support the audio element.
         </audio>
 
         <div class="playlist">
-          <!-- EDIT: Track 1 source + titles -->
+
+          <!-- TRACK 1 -->
           <div class="playlist-row active"
                data-src="/reflections/pages/the-paradox-of-god/theparadoxofgod.mp3">
             <div class="playlist-main">
               <div class="playlist-title">The Paradox of God</div>
-              <div class="playlist-sub">Main narration</div>
+              <div class="playlist-sub">✏️ Description of this track</div>
             </div>
             <div class="playlist-duration">--:--</div>
           </div>
 
-          <!-- OPTIONAL: Track 2 -->
+          <!-- TRACK 2 (optional) -->
           <!--
           <div class="playlist-row"
-               data-src="/reflections/pages/the-paradox-of-god/paradox-alt.mp3">
+               data-src="/reflections/pages/the-paradox-of-god/track2.mp3">
             <div class="playlist-main">
-              <div class="playlist-title">The Paradox of God (Alt)</div>
-              <div class="playlist-sub">Alternative tone or language</div>
+              <div class="playlist-title">Track 2 Title</div>
+              <div class="playlist-sub">Second narration</div>
             </div>
             <div class="playlist-duration">--:--</div>
           </div>
           -->
+
         </div>
       </div>
     </section>
 
-    <!-- MAIN CONTENT -->
+    <!-- ============================================================
+         MAIN CONTENT (YOUR REFLECTION TEXT)
+         ✏️ EDIT THIS SECTION COMPLETELY
+    ============================================================ -->
     <div class="content">
-      <!-- EDIT: Replace with the actual reflection text -->
-      <p>
-        We are told that God is perfect, yet creates what is flawed — a paradox that religion often avoids but the soul keeps returning to.
-      </p>
-
-      <p>
-        When we speak of a perfect being, we imagine a mind beyond error, a will beyond contradiction, and a love beyond condition.
-        Yet the world we wake up into is stitched with accidents, cruelty, and silence. The more honest we are about experience,
-        the more the words “perfect” and “loving” begin to tremble under the weight of reality.
-      </p>
-
-      <!-- Add the rest of your paragraphs here -->
+      <p>✏️ Your paragraphs go here…</p>
+      <p>✏️ Add as many as needed...</p>
     </div>
 
+    <!-- Footer -->
     <footer>
       <p>© 2025 Ninox Antolihao · First Edition — Stone Grill Press · Leyte, Philippines</p>
     </footer>
+
   </main>
 
-  <!-- =========================
-       SHARED HEADER + AUDIO JS
-  ========================== -->
-  <script src="/reflections/assets/reflections-header.js?v=21" defer></script>
+  <!-- ============================================================
+       UNIFIED HEADER + MENU LOGIC (DO NOT EDIT)
+  ============================================================ -->
+  <script src="/reflections/assets/reflections-header.js?v=1" defer></script>
+
+  <!-- ============================================================
+       SHARE BUTTON LOGIC (DO NOT EDIT)
+  ============================================================ -->
   <script>
-  if ('serviceWorker' in navigator) {
-    navigator.serviceWorker.register('/reflections/sw.js');
-  }
-</script>
+    function sharePage() {
+      if (navigator.share) {
+        navigator.share({
+          title: document.title,
+          text: "Read this reflection by Ninox Antolihao.",
+          url: window.location.href
+        });
+      } else {
+        alert("Sharing not supported on this device.");
+      }
+    }
+  </script>
+
+  <!-- ============================================================
+       SERVICE WORKER (OPTIONAL BUT RECOMMENDED)
+       DO NOT EDIT unless file path changes
+  ============================================================ -->
+  <script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('/reflections/sw.js');
+    }
+  </script>
+
 </body>
 </html>
