--- a/reflections/pages/the-paradox-of-god/read.html
+++ b/reflections/pages/the-paradox-of-god/read.html
@@ -124,8 +124,19 @@
          ✏️ EDIT THIS SECTION COMPLETELY
     ============================================================ -->
     <div class="content">
-      <p>✏️ Your paragraphs go here…</p>
-      <p>✏️ Add as many as needed...</p>
+      <p>.
+Anyone who claims to know the full truth about God speaks from illusion. For how can the finite explain the infinite? How can a single mind, bound by language and time, contain something that has no edges, no beginning, no name?…</p>
+      <p>To speak of God is already to limit what cannot be limited. Each word becomes a
+frame — and the moment you frame the infinite, you lose it.
+So we do not describe God. We only describe our experience of not knowing..</p>
+      <p> Belief Is Not Truth…</p>
+      <p> Belief and truth are not the same. Belief is the bridge we build across uncertainty — truth is the ocean beneath it. We walk on belief because we fear the deep — the
+unknown, the silence, the mystery.
+When we cannot explain a thing, we give it God’s name — thunder, creation, consciousness, death. In doing so, we comfort ourselves not with understanding, but with closure. </p>
+      <p>To say “God did it—-” often means—- “I do not understand it…” And that’s fine — until we start preaching it as truth. Every culture creates God in its own image — gentle or wrathful, distant or near — because the idea of God mirrors the human condition. We fear the unknown, so we name it. We crave meaning, so we create a being who gives it. We suffer, so we imagine a hand that heals. But what if God is not someone we can describe — but the very space that allows all descriptions to exist?</p>
+        <p> To admit we do not understand God —-is not weakness — it is honesty. The more we try to claim truth, the farther we move from it. Maybe silence is the only sacred language left — because silence never lies. </p>
+        <p>In silence, we do not define God. We listen to the mystery. </p>
+        <p> The wisest thing ever said about God may be the confession: I do not know. For only then does understanding begins. </p>
     </div>
 
     <!-- Footer -->
