--- a/reflections/pages/transcendence/read.html
+++ b/reflections/pages/transcendence/read.html
@@ -10,21 +10,21 @@
   ============================================================ -->
   <title>The Enigma of Transcendence-- Solitude Reflections · Ninox Antolihao</title>
 
-  <meta name="description" content="✏️ Short description of this reflection.">
+  <meta name="description" content="✏️ Unraveling the Enigma of Absolute Truth">
 
   <link rel="canonical" href="https://stonegrillresto.net/reflections/pages/transcendence/read.html">
 
   <!-- Open Graph -->
   <meta property="og:type" content="article">
   <meta property="og:title" content="The Enigma of Transcendence -- Solitude Reflections">
-  <meta property="og:description" content="✏️ Same description here.">
+  <meta property="og:description" content="✏️ Unraveling the Enigma of Absolute Truth">
   <meta property="og:image" content="/reflections/pages/transcendence/share.jpg">
   <meta property="og:url" content="https://stonegrillresto.net/reflections/pages/transcendence/read.html">
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="The lll -- Solitude Reflections">
-  <meta name="twitter:description" content="✏️ Same description.">
+  <meta name="twitter:description" content="✏️ Unraveling the Enigma of Absolute Truth">
   <meta name="twitter:image" content="/reflections/pages/transcendence/share.jpg">
 
   <!-- JSON-LD -->
