--- a/reflections/reflections-header.html
+++ b/reflections/reflections-header.html
@@ -2,7 +2,7 @@
 
 <header class="ref-header">
   <div class="ref-header-inner">
-    <!-- LEFT: Logo + brand + controls -->
+    <!-- LEFT: Brand + actions -->
     <div class="ref-header-left">
       <a href="/reflections/index.html" class="brand-link">
         <img src="/reflections/assets/logo1.PNG"
@@ -14,6 +14,7 @@
         </span>
       </a>
 
+      <!-- Line with hamburger + buttons -->
       <div class="header-actions">
         <!-- Hamburger -->
         <button class="nav-toggle"
@@ -23,7 +24,7 @@
           ☰
         </button>
 
-        <!-- Local page tools (optional but shared) -->
+        <!-- Back / Share / Audio -->
         <div class="nav-buttons">
           <button type="button" id="btnBack">Back</button>
           <button type="button" id="btnShare">Share</button>
@@ -32,7 +33,7 @@
       </div>
     </div>
 
-    <!-- RIGHT: Current page badge (auto-filled by JS) -->
+    <!-- RIGHT: current page badge -->
     <div class="ref-header-right">
       <div class="current-page-badge" aria-label="Currently reading">
         <span class="page-icon" id="current-page-icon">△</span>
@@ -41,13 +42,12 @@
     </div>
   </div>
 
-  <!-- DROPDOWN PANEL: Reflections list (opens from hamburger) -->
+  <!-- FLOATING MENU PANEL (Style A) -->
   <div class="ref-menu-panel" aria-label="Reflections menu">
     <div class="ref-menu-card">
       <div class="ref-menu-title">REFLECTIONS</div>
       <ul class="ref-menu-list">
-        <!-- 🔽 WHEN YOU ADD A NEW REFLECTION PAGE,
-             ADD A LINK HERE AND MATCH THE HREF. -->
+        <!-- Add/edit links as you add reflections -->
         <li>
           <a href="/reflections/pages/the-paradox-of-god/read.html"
              class="ref-menu-link"
@@ -56,7 +56,7 @@
           </a>
         </li>
         <li>
-          <a href="/reflections/pages/the-divine-premise/read.html"
+          <a href="/reflections/pages/divine-hiddeness/read.html"
              class="ref-menu-link"
              data-icon="◇">
             The Divine Premise
@@ -70,13 +70,6 @@
           </a>
         </li>
         <li>
-          <a href="/reflections/pages/echoes-of-survival/read.html"
-             class="ref-menu-link"
-             data-icon="♒">
-            Echoes of Survival
-          </a>
-        </li>
-        <li>
           <a href="/reflections/pages/silent-influence/read.html"
              class="ref-menu-link"
              data-icon="❖">
@@ -84,7 +77,7 @@
           </a>
         </li>
         <li>
-          <a href="/reflections/pages/madness-of-faith/read.html"
+          <a href="/reflections/pages/the-madness-of-fath/read.html"
              class="ref-menu-link"
              data-icon="☄">
             The Madness of Faith
@@ -101,9 +94,10 @@
           <a href="/reflections/pages/initial-premise/read.html"
              class="ref-menu-link"
              data-icon="▵">
-            The Fullness that Needs Nothing
+            The Initial Premise of a Perfect, Loving God
           </a>
         </li>
+        <!-- You can keep adding more here -->
       </ul>
     </div>
   </div>
