--- a/reflections/reflections-header.html
+++ b/reflections/reflections-header.html
@@ -1,107 +1,68 @@
-<!-- /reflections/reflections-header.html -->
-
 <header class="ref-header">
   <div class="ref-header-inner">
-    <!-- LEFT: Brand + actions -->
+
+    <!-- LEFT AREA: Logo + Brand + Hamburger -->
     <div class="ref-header-left">
+      <button class="nav-toggle" aria-label="Open menu" aria-expanded="false">☰</button>
+
       <a href="/reflections/index.html" class="brand-link">
-        <img src="/reflections/assets/logo1.PNG"
-             alt="Moments of Solitude"
-             class="brand-logo">
+        <img src="/reflections/assets/logo1.PNG" alt="Solitude Logo" class="brand-logo">
         <span class="brand-text">
           <span class="brand-title">Moments of Solitude</span>
           <span class="brand-subtitle">Stone Grill Reflections</span>
         </span>
       </a>
-
-      <!-- Line with hamburger + buttons -->
-      <div class="header-actions">
-        <!-- Hamburger -->
-        <button class="nav-toggle"
-                type="button"
-                aria-label="Toggle reflections menu"
-                aria-expanded="false">
-          ☰
-        </button>
-
-        <!-- Back / Share / Audio -->
-        <div class="nav-buttons">
-          <button type="button" id="btnBack">Back</button>
-          <button type="button" id="btnShare">Share</button>
-          <button type="button" id="btnAudio">Audio</button>
-        </div>
-      </div>
     </div>
 
-    <!-- RIGHT: current page badge -->
+    <!-- RIGHT AREA: Page Badge + Tools -->
     <div class="ref-header-right">
-      <div class="current-page-badge" aria-label="Currently reading">
-        <span class="page-icon" id="current-page-icon">△</span>
-        <span class="page-label" id="current-page-label">Reflection</span>
+      <div class="header-actions">
+        <button id="btnBack" class="header-btn">Back</button>
+        <button id="btnShare" class="header-btn">Share</button>
+        <button id="btnAudio" class="header-btn">Audio</button>
+      </div>
+
+      <div class="current-page-badge">
+        <span id="current-page-icon" class="page-icon">△</span>
+        <span id="current-page-label" class="page-label">Reflection</span>
       </div>
     </div>
+
   </div>
 
-  <!-- FLOATING MENU PANEL (Style A) -->
-  <div class="ref-menu-panel" aria-label="Reflections menu">
+  <!-- SLIDING MENU PANEL -->
+  <nav class="ref-menu-panel">
     <div class="ref-menu-card">
       <div class="ref-menu-title">REFLECTIONS</div>
       <ul class="ref-menu-list">
-        <!-- Add/edit links as you add reflections -->
-        <li>
-          <a href="/reflections/pages/the-paradox-of-god/read.html"
-             class="ref-menu-link"
-             data-icon="△">
-            The Paradox of God
-          </a>
-        </li>
-        <li>
-          <a href="/reflections/pages/divine-hiddeness/read.html"
-             class="ref-menu-link"
-             data-icon="◇">
-            The Divine Premise
-          </a>
-        </li>
-        <li>
-          <a href="/reflections/pages/the-lost-language-of-metaphor/read.html"
-             class="ref-menu-link"
-             data-icon="✺">
-            The Lost Language of Metaphor
-          </a>
-        </li>
-        <li>
-          <a href="/reflections/pages/silent-influence/read.html"
-             class="ref-menu-link"
-             data-icon="❖">
-            Silent Influence
-          </a>
-        </li>
-        <li>
-          <a href="/reflections/pages/the-madness-of-fath/read.html"
-             class="ref-menu-link"
-             data-icon="☄">
-            The Madness of Faith
-          </a>
-        </li>
-        <li>
-          <a href="/reflections/pages/the-god-we-created/read.html"
-             class="ref-menu-link"
-             data-icon="◎">
-            The God We Created
-          </a>
-        </li>
-        <li>
-          <a href="/reflections/pages/initial-premise/read.html"
-             class="ref-menu-link"
-             data-icon="▵">
-            The Initial Premise of a Perfect, Loving God
-          </a>
-        </li>
-        <!-- You can keep adding more here -->
+
+        <li><a class="ref-menu-link" data-icon="△"
+               href="/reflections/pages/the-paradox-of-god/read.html">The Paradox of God</a></li>
+
+        <li><a class="ref-menu-link" data-icon="◇"
+               href="/reflections/pages/divine-hiddeness/read.html">The Divine Premise</a></li>
+
+        <li><a class="ref-menu-link" data-icon="✺"
+               href="/reflections/pages/the-lost-language-of-metaphor/read.html">The Lost Language of Metaphor</a></li>
+
+        <li><a class="ref-menu-link" data-icon="♒"
+               href="/reflections/pages/echoes-of-survival/read.html">Echoes of Survival</a></li>
+
+        <li><a class="ref-menu-link" data-icon="❖"
+               href="/reflections/pages/silent-influence/read.html">Silent Influence</a></li>
+
+        <li><a class="ref-menu-link" data-icon="☄"
+               href="/reflections/pages/the-madness-of-fath/read.html">The Madness of Faith</a></li>
+
+        <li><a class="ref-menu-link" data-icon="◎"
+               href="/reflections/pages/the-god-we-created/read.html">The God We Created</a></li>
+
+        <li><a class="ref-menu-link" data-icon="▵"
+               href="/reflections/pages/initial-premise/read.html">The Fullness That Needs Nothing</a></li>
+
       </ul>
     </div>
-  </div>
+  </nav>
 
-  <!-- DIM BACKGROUND WHEN MENU OPEN -->
   <div class="ref-menu-overlay"></div>
 </header>
