--- a/reflections/pages/the-paradox-of-god/read.html
+++ b/reflections/pages/the-paradox-of-god/read.html
@@ -5,27 +5,33 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!-- ============================================================
-       SEO + SOCIAL META TAGS
-       ✏️ EDIT THESE FOR EACH NEW PAGE
+       SEO + SOCIAL META TAGS  (FINAL CLEAN VERSION)
   ============================================================ -->
   <title>The Paradox of God — Solitude Reflections · Ninox Antolihao</title>
 
-  <meta name="description" content="✏️ Short description of this reflection.">
+  <meta name="description"
+        content="A quiet, honest reflection on the limits of belief, the mystery of God, and the humility of saying: I do not know.">
 
   <link rel="canonical" href="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/read.html">
 
   <!-- Open Graph -->
   <meta property="og:type" content="article">
   <meta property="og:title" content="The Paradox of God — Solitude Reflections">
-  <meta property="og:description" content="✏️ Same description here.">
-  <meta property="og:image" content="/reflections/pages/the-paradox-of-god/share.jpg">
-  <meta property="og:url" content="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/read.html">
+  <meta property="og:description"
+        content="A reflection on belief, truth, and the courage to live with mystery.">
+  <meta property="og:image"
+        content="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/paradoxofgod.jpg">
+  <meta property="og:image:alt" content="Cover of The Paradox of God by Ninox Antolihao">
+  <meta property="og:url"
+        content="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/read.html">
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="The Paradox of God — Solitude Reflections">
-  <meta name="twitter:description" content="✏️ Same description.">
-  <meta name="twitter:image" content="/reflections/pages/the-paradox-of-god/share.jpg">
+  <meta name="twitter:description"
+        content="A reflection on belief, truth, and the silence that teaches.">
+  <meta name="twitter:image"
+        content="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/paradoxofgod.jpg">
 
   <!-- JSON-LD -->
   <script type="application/ld+json">
@@ -37,53 +43,57 @@
       "@type": "Person",
       "name": "Ninox Antolihao"
     },
-    "image": "/reflections/pages/the-paradox-of-god/share.jpg",
+    "image": "https://stonegrillresto.net/reflections/pages/the-paradox-of-god/paradoxofgod.jpg",
     "publisher": {
       "@type": "Organization",
       "name": "Stone Grill Press",
       "logo": {
         "@type": "ImageObject",
-        "url": "/reflections/assets/logo1.PNG"
+        "url": "https://stonegrillresto.net/reflections/assets/logo1.PNG"
       }
     },
-    "description": "✏️ Same description again.",
-    "mainEntityOfPage": "https://stonegrillresto.net/reflections/pages/the-paradox-of-god/read.html"
+    "description":
+      "A quiet reflection on belief, truth, and the humility of embracing mystery.",
+    "mainEntityOfPage":
+      "https://stonegrillresto.net/reflections/pages/the-paradox-of-god/read.html"
   }
   </script>
 
   <!-- ============================================================
-       UNIFIED REFLECTIONS CSS  (DO NOT EDIT)
+       UNIFIED REFLECTIONS CSS
   ============================================================ -->
-<link rel="stylesheet" href="/reflections/assets/reflections-header.css?v=22">
+  <link rel="stylesheet" href="/reflections/assets/reflections-header.css?v=22">
 
 </head>
+
 
 <body>
 
   <!-- ============================================================
-       UNIFIED HEADER PLACEHOLDER (DO NOT EDIT)
+       UNIFIED HEADER PLACEHOLDER  (auto-loaded by JS)
   ============================================================ -->
   <div id="ref-header-placeholder"></div>
+
 
   <main class="page-content">
 
     <!-- ============================================================
          PAGE TITLE + SUBTITLE
-         ✏️ EDIT THESE FOR EACH PAGE
     ============================================================ -->
-    <header class="page-header" style="max-width:800px;margin:0 auto 0.8rem auto;">
+    <header class="page-header" style="max-width:800px;margin:0 auto 1rem auto;">
       <h1>The Paradox of God</h1>
       <p class="page-subtitle">A Solitude Reflection by Ninox Antolihao</p>
 
-      <!-- Scrolling subtitle -->
       <div class="scrolling-subtitle">
-        <span>✏️ Short moving subtitle text here</span>
+        <span>
+          A meditation on belief, truth, and the mystery that cannot be named.
+        </span>
       </div>
     </header>
 
+
     <!-- ============================================================
          AUDIO PLAYER + PLAYLIST
-         ✏️ EDIT MP3 FILE PATHS + TITLES ONLY
     ============================================================ -->
     <section class="audio-wrap">
       <div class="audio-wrapper">
@@ -98,83 +108,77 @@
                data-src="/reflections/pages/the-paradox-of-god/theparadoxofgod.mp3">
             <div class="playlist-main">
               <div class="playlist-title">The Paradox of God</div>
-              <div class="playlist-sub">✏️ Description of this track</div>
+              <div class="playlist-sub">Main narration — quiet, reflective reading</div>
             </div>
-            <div class="playlist-duration">--:--</div>
-          </div>
-
-          <!-- TRACK 2 (optional) -->
-          <!--
+            <div class="playlist-duration"> 4:08</div>
+        
           <div class="playlist-row"
-               data-src="/reflections/pages/the-paradox-of-god/track2.mp3">
+               data-src="/reflections/pages/transcendence/theshieldoftranscendence.mp3">
             <div class="playlist-main">
-              <div class="playlist-title">Track 2 Title</div>
-              <div class="playlist-sub">Second narration</div>
+              <div class="playlist-title">The Shield Of Transcendence (Alternate Voice)</div>
+              <div class="playlist-sub">Cinematic or deeper-toned narration</div>
             </div>
-            <div class="playlist-duration">--:--</div>
+            <div class="playlist-duration"> 4:33</div>
           </div>
-          -->
+          
 
         </div>
       </div>
     </section>
 
+
     <!-- ============================================================
-         MAIN CONTENT (YOUR REFLECTION TEXT)
-         ✏️ EDIT THIS SECTION COMPLETELY
+         MAIN CONTENT (THE REFLECTION)
     ============================================================ -->
     <div class="content">
-      <p>.
-Anyone who claims to know the full truth about God speaks from illusion. For how can the finite explain the infinite? How can a single mind, bound by language and time, contain something that has no edges, no beginning, no name?…</p>
-      <p>To speak of God is already to limit what cannot be limited. Each word becomes a
-frame — and the moment you frame the infinite, you lose it.
-So we do not describe God. We only describe our experience of not knowing..</p>
-      <p> Belief Is Not Truth…</p>
-      <p> Belief and truth are not the same. Belief is the bridge we build across uncertainty — truth is the ocean beneath it. We walk on belief because we fear the deep — the
-unknown, the silence, the mystery.
-When we cannot explain a thing, we give it God’s name — thunder, creation, consciousness, death. In doing so, we comfort ourselves not with understanding, but with closure. </p>
-      <p>To say “God did it—-” often means—- “I do not understand it…” And that’s fine — until we start preaching it as truth. Every culture creates God in its own image — gentle or wrathful, distant or near — because the idea of God mirrors the human condition. We fear the unknown, so we name it. We crave meaning, so we create a being who gives it. We suffer, so we imagine a hand that heals. But what if God is not someone we can describe — but the very space that allows all descriptions to exist?</p>
-        <p> To admit we do not understand God —-is not weakness — it is honesty. The more we try to claim truth, the farther we move from it. Maybe silence is the only sacred language left — because silence never lies. </p>
-        <p>In silence, we do not define God. We listen to the mystery. </p>
-        <p> The wisest thing ever said about God may be the confession: I do not know. For only then does understanding begins. </p>
+
+      <p>Anyone who claims to know the full truth about God speaks from illusion. For how can the finite explain the infinite? How can a single mind, bound by language and time, contain something that has no edges, no beginning, no name?</p>
+
+      <p>To speak of God is already to limit what cannot be limited. Each word becomes a frame — and the moment you frame the infinite, you lose it. So we do not describe God. We only describe our experience of not knowing.</p>
+
+      <p><strong>Belief is not truth.</strong></p>
+
+      <p>Belief is the bridge we build across uncertainty — but truth is the ocean beneath it. We walk on belief because we fear the deep — the unknown, the silence, the mystery. When we cannot explain a thing, we give it God’s name — thunder, creation, consciousness, death. In doing so, we comfort ourselves not with understanding, but with closure.</p>
+
+      <p>To say “God did it” often means: “I do not understand it.” And that is fine — until we begin preaching our uncertainty as absolute truth.</p>
+
+      <p>Every culture creates God in its own image — gentle or wrathful, distant or intimate — because the idea of God mirrors the human condition. We fear the unknown, so we name it. We crave meaning, so we imagine a giver of meaning. We suffer, so we imagine a healer.</p>
+
+      <p>But what if God is not someone we can describe, but the very space that allows all descriptions to exist?</p>
+
+      <p>To admit we do not understand God is not weakness — it is honesty. And honesty is where wisdom begins. The more tightly we cling to our definitions, the farther we move from truth. Maybe silence is the only sacred language left — for silence never lies.</p>
+
+      <p>In silence, we do not define God. We listen to the mystery.</p>
+
+      <p>The wisest thing ever said about God may simply be the confession: <em>I do not know.</em></p>
+
     </div>
 
-    <!-- Footer -->
+
+    <!-- ============================================================
+         FOOTER
+    ============================================================ -->
     <footer>
       <p>© 2025 Ninox Antolihao · First Edition — Stone Grill Press · Leyte, Philippines</p>
     </footer>
 
   </main>
 
-  <!-- ============================================================
-       UNIFIED HEADER + MENU LOGIC (DO NOT EDIT)
-  ============================================================ -->
-  <script src="/reflections/assets/reflections-header.js?v=1" defer></script>
 
   <!-- ============================================================
-       SHARE BUTTON LOGIC (DO NOT EDIT)
+       UNIFIED HEADER JS + MENU LOGIC
   ============================================================ -->
-  <script>
-    function sharePage() {
-      if (navigator.share) {
-        navigator.share({
-          title: document.title,
-          text: "Read this reflection by Ninox Antolihao.",
-          url: window.location.href
-        });
-      } else {
-        alert("Sharing not supported on this device.");
-      }
-    }
-  </script>
+  <script src="/reflections/assets/reflections-header.js?v=22" defer></script>
+
 
   <!-- ============================================================
-       SERVICE WORKER (OPTIONAL BUT RECOMMENDED)
-       DO NOT EDIT unless file path changes
+       SERVICE WORKER  (PWA OFFLINE SUPPORT)
   ============================================================ -->
   <script>
     if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('/reflections/sw.js');
+      navigator.serviceWorker.register('/reflections/sw.js')
+        .then(() => console.log("SW registered for Reflections"))
+        .catch(err => console.log("SW registration failed:", err));
     }
   </script>
 
