--- a/reflections/index.html
+++ b/reflections/index.html
@@ -135,16 +135,16 @@
           <a class="book-link" href="/reflections/pages/the-inner-listener/read.html" target="_blank" rel="noopener">
             <img class="book-cover"
                  src="/reflections/pages/the-inner-listener/theinnerlistener.jpg"
-                 alt="The Paradox of God cover"
+                 alt="The Inner Listener cover"
                  onerror="this.src='/reflections/assets/placeholder.jpg'">
           </a>
         </div>
         <div class="right">
-          <h3><a class="title-link" href="/reflections/pages/the-inner-listener/read.html" target="_blank" rel="noopener">The God Paradox of God</a></h3>
-          <p>to those who seek truth, even when silence is the only answer.</p>
+          <h3><a class="title-link" href="/reflections/pages/the-inner-listener/read.html" target="_blank" rel="noopener">The Inner Listener</a></h3>
+          <p>How Prayer Shapes Our Identity.</p>
           <p class="meta">First Edition 2025 • <a class="title-link" href="/reflections/pages/the-paradox-of-god/The_Paradox_of_God.pdf" target="_blank" rel="noopener">PDF</a></p>
-      <section class="audio-wrap" id="audioMount-paradox of god">
-            <p class="label">🎧 Audio Reflection: <strong>The Paradox of God</strong></p>
+      <section class="audio-wrap" id="audioMount-prayer">
+            <p class="label">🎧 Audio Reflection: <strong>The Inner Listener</strong></p>
             <audio controls preload="auto" style="width:100%">
               <source src="/reflections/pages/the-inner-listener/theinnerlistener.mp3" type="audio/mpeg">
               Your browser does not support the audio element.
